# python-frameio-client

./: .buildinfo  .bumpversion.cfg  .gitignore  Dockerfile  LICENSE  Makefile  README.md  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  contributing.md
.github/actions/: docs.yml
.github/workflows/: docs.yml  documentation.yml
_sources/: index.rst.txt
_sources/classes/: assets.rst.txt  comments.rst.txt
_sources/modules/: helpers.rst.txt
classes/: assets.html  comments.html  index.html  logs.html  projects.html  search.html  sharing.html  teams.html  users.html
docs/: Makefile  conf.py  index.rst  installation.rst  publish.py  requirements.txt
docs/api/: frameioclient.rst  frameioclient.service.rst  frameioclient.utils.rst
docs/classes/: index.rst  logs.rst  projects.rst  search.rst  sharing.rst  teams.rst  users.rst
docs/modules/: downloader.rst  index.rst  uploader.rst  utils.rst
examples/: asset_scraper.py  comment_scraper.py  download_asset.py  download_benchmark.py  get_me.py  invite_users.py  new_tests.py  recursive_upload.py  upload_asset.py  user_management.py
examples/account_info/: crawler.py
examples/assets/: asset_scraper.py  asset_tree.py  list_assets.py  recursive_upload.py  simple_recursive_upload.py
examples/audit_logs/: crawl.py  crawler.py
examples/comments/: comment_scraper.py  (+2 more)
frameioclient/: __init__.py  client.py  config.py  download.py  exceptions.py  fiocli.py  next_uploader.py  py2_uploader.py  py3_uploader.py  socket.py  upload.py  uploader.py  utils.py
modules/: downloader.html  helpers.html  index.html  uploader.html  utils.html
scripts/: download_benchmark.py
tests/: conftest.py  integration.py  py2_integration.py  py3_integration.py  test_frameioclient.py  test_frameiodownloader.py  test_integration.py  test_wmid.py
todo-table/: build_table.py  token.txt
(+64 files in other folders)
